--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Hello, World!</h1>
     <p>I am learning Web Development</p>
+    <p>TEOH WEI JUN AI220379 SECTION 3</p>
   </body>
 </html>
